--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,17 @@ plugins {
     id 'kotlin-android'
 }
 
+def getAppId() {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('./local.properties').newDataInputStream())
+    return properties.getProperty("APPID");
+}
+
+def getAppSecret() {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('./local.properties').newDataInputStream())
+    return properties.getProperty("SECRET");
+}
 android {
     compileSdk 31
 
@@ -14,6 +25,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "APPID", "\""+getAppId()+"\""
+        buildConfigField "String", "APPSECRET", "\""+getAppSecret()+"\""
     }
 
     buildTypes {
@@ -29,6 +43,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -37,6 +55,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'org.bitbucket.poiteam:android-vd-non-ui:v4.1.30'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
